--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,12 @@
       }
     ],
     "paths": {
-      "@/*": ["./src/*"]
+      "@/models/*": ["./src/models/*"],
+      "@/components/*": ["./src/components/*"],
+      "@/api/*": ["./src/api-client/*"],
+      "@/hooks/*": ["./src/hooks/*"],
+      "@/common/*": ["./src/common/*"],
+      "@/utils/*": ["./src/utils/*"],
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
